--- a/src/styles.css
+++ b/src/styles.css
@@ -17,49 +17,127 @@ input {
   font: inherit;
 }
 
+body {
+  background: url('./img/weather/idle.webp');
+  background-size: cover;
+  background-position: center center;
+}
+
+input {
+  margin: 0.5rem;
+  padding: 0.375rem;
+  height: 3rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #f5f5f5;
+  border-radius: 20px;
+  color: #ffffff;
+  font-size: 1.125rem;
+}
+
+button {
+  margin: 0.5rem;
+  padding: 0.375rem;
+  height: 3rem;
+  background-color: #15203a;
+  border: 2px solid #f5f5f5;
+  border-radius: 20px;
+  color: #ffffff;
+  font-size: 1.125rem;
+  cursor: pointer;
+  transition: 0.1s;
+}
+
+button:hover {
+  background-color: #1e2e53;
+}
+
+.clicked {
+    scale: 0.95;
+}
+
 #container {
+  background-color:rgba(0, 0, 0, 0.3);
   min-height: 100vh;
   min-width: 100vw;
   display: grid;
-  grid-template-rows: 1fr 3rem 1fr;
+  grid-template-rows: 1fr 4rem 1fr;
   grid-template-columns: repeat(3, 1fr);
   grid-template-areas: 
     'location current additional' 
     'search search search'
-    'weekly addition1 addition2';
+    'weekly weekly weekly';
 }
 
 #location {
+  padding: 1rem;
   grid-area: location;
-  background-color: red;
+  color: #ffffff;
+  text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5);
+  display: none;
+  grid-template-rows: 1fr 1fr 2rem;
+  grid-template-columns: 1fr;
+  grid-template-areas: 'address' 'svg-temp' 'conditions';
+}
+
+#resolvedAddress {
+  grid-area: address;
+  font-size: 5rem;
+}
+  
+#svg-temp{
+  align-self: center;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 1rem;
+}
+
+#temps {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.125rem;
+}
+
+#temp {
+  font-size: 4rem;
+}
+
+#conditions {
+  grid-area: conditions;
+  font-size: 2rem;
 }
 
 #current-condition {
   grid-area: current;
-  background-color: yellow;
 }
 
 #additional-information {
   grid-area: additional;
-  background-color: green;
 }
 
 #center-search {
   grid-area: search;
-  background-color: black;
+  background: rgba(0, 0, 0, 0.3);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+#center-search::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,       
+    rgba(0, 0, 0, 0.3) 20%,   
+    rgba(0, 0, 0, 0.3) 80%,   
+    rgba(0, 0, 0, 0) 100%     
+  );
+  pointer-events: none;
 }
 
 #weekly-overview {
   grid-area: weekly;
-  background-color: purple;
-}
-
-#addition1 {
-  grid-area: addition1;
-  background-color: blue;
-}
-
-#addition2 {
-  grid-area: addition2;
-  background-color: pink;
 }
